--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <input id="search" placeholder="Search by name or code" />
 
 <h3>Routine</h3>
-<button onclick "filter('timeOfDay','Morning')">Morning</button>
+<button onclick="filter('timeOfDay','Morning')">Morning</button>
 <button onclick="filter('timeOfDay','Afternoon')">Afternoon</button>
 <button onclick="filter('timeOfDay','Evening')">Evening</button>
 <button onclick="filter('timeOfDay','Night')">Before Sleep</button>
